package com.paper.greendao;

import java.util.Map;

import org.greenrobot.greendao.AbstractDao;
import org.greenrobot.greendao.AbstractDaoSession;
import org.greenrobot.greendao.database.Database;
import org.greenrobot.greendao.identityscope.IdentityScopeType;
import org.greenrobot.greendao.internal.DaoConfig;

import com.example.paperhelper.model.bean.PageUrlModel;

import com.paper.greendao.PageUrlModelDao;

// THIS CODE IS GENERATED BY greenDAO, DO NOT EDIT.

/**
 * {@inheritDoc}
 * 
 * @see org.greenrobot.greendao.AbstractDaoSession
 */
public class DaoSession extends AbstractDaoSession {

    private final DaoConfig pageUrlModelDaoConfig;

    private final PageUrlModelDao pageUrlModelDao;

    public DaoSession(Database db, IdentityScopeType type, Map<Class<? extends AbstractDao<?, ?>>, DaoConfig>
            daoConfigMap) {
        super(db);

        pageUrlModelDaoConfig = daoConfigMap.get(PageUrlModelDao.class).clone();
        pageUrlModelDaoConfig.initIdentityScope(type);

        pageUrlModelDao = new PageUrlModelDao(pageUrlModelDaoConfig, this);

        registerDao(PageUrlModel.class, pageUrlModelDao);
    }
    
    public void clear() {
        pageUrlModelDaoConfig.clearIdentityScope();
    }

    public PageUrlModelDao getPageUrlModelDao() {
        return pageUrlModelDao;
    }

}
