@startuml

title __GREENDAO's Class Diagram__\n

  namespace com.paper.greendao {
    class com.paper.greendao.DaoMaster {
        {static} + SCHEMA_VERSION : int
        + DaoMaster()
        + DaoMaster()
        {static} + createAllTables()
        {static} + dropAllTables()
        {static} + newDevSession()
        + newSession()
        + newSession()
    }
  }
  

  namespace com.paper.greendao {
    class com.paper.greendao.DaoMaster.DevOpenHelper {
        + DevOpenHelper()
        + DevOpenHelper()
        + onUpgrade()
    }
  }
  

  namespace com.paper.greendao {
    abstract class com.paper.greendao.DaoMaster.OpenHelper {
        + OpenHelper()
        + OpenHelper()
        + onCreate()
    }
  }
  

  namespace com.paper.greendao {
    class com.paper.greendao.DaoSession {
        - pageUrlModelDaoConfig : DaoConfig
        + DaoSession()
        + clear()
        + getPageUrlModelDao()
    }
  }
  

  namespace com.paper.greendao {
    class com.paper.greendao.PageUrlModelDao {
        {static} + TABLENAME : String
        + PageUrlModelDao()
        + PageUrlModelDao()
        {static} + createTable()
        {static} + dropTable()
        + getKey()
        + hasKey()
        + readEntity()
        + readEntity()
        + readKey()
        # bindValues()
        # bindValues()
        # isEntityUpdateable()
        # updateKeyAfterInsert()
    }
  }
  

  namespace com.paper.greendao {
    class com.paper.greendao.PageUrlModelDao.Properties {
        {static} + Id : Property
        {static} + PageName : Property
        {static} + Url : Property
    }
  }
  

  com.paper.greendao.DaoMaster -up-|> org.greenrobot.greendao.AbstractDaoMaster
  com.paper.greendao.DaoMaster +-down- com.paper.greendao.DaoMaster.DevOpenHelper
  com.paper.greendao.DaoMaster +-down- com.paper.greendao.DaoMaster.OpenHelper
  com.paper.greendao.DaoMaster.DevOpenHelper -up-|> com.paper.greendao.DaoMaster.OpenHelper
  com.paper.greendao.DaoMaster.OpenHelper -up-|> org.greenrobot.greendao.database.DatabaseOpenHelper
  com.paper.greendao.DaoSession -up-|> org.greenrobot.greendao.AbstractDaoSession
  com.paper.greendao.DaoSession o-- com.paper.greendao.PageUrlModelDao : pageUrlModelDao
  com.paper.greendao.PageUrlModelDao -up-|> org.greenrobot.greendao.AbstractDao
  com.paper.greendao.PageUrlModelDao +-down- com.paper.greendao.PageUrlModelDao.Properties


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
